Fix bug with width overflowing past visual width. https://github.com/deduced/bov-personal-portfolio/issues/8 https://github.com/deduced/bov-personal-portfolio/issues/9
* Made adjustments to the skills bar graph to make them "tighter" visually
* Made modifications to the tooltip box to keep within visual boundaries

--- a/src/stylesheets/components/_bar-graph.scss
+++ b/src/stylesheets/components/_bar-graph.scss
@@ -1,7 +1,7 @@
 
 .c-bar-graph {
 
-  min-width: 332px;
+  min-width: 270px;
 
   &__container {
   @extend .l-flexy-row;
@@ -39,7 +39,7 @@
   &__container--bars {
     @extend .l-flexy-row;
     position: relative;
-    width: 70%;
+    width: 50%;
     -webkit-box-align: end;
         -ms-flex-align: end;
             align-items: flex-end;
